# Ivee

./: package.json  pnpm-lock.yaml  tsconfig.json
public/: hey_ivee.js  hey_ivee.ppn
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: verbal_consent.rhn  what_do_you_see.ppn
src-tauri/src/: lib.rs  main.rs
src/components/: KeywordDetection.tsx
