[package]
name = "Ivee"
version = "0.1.0"
description = "Ivee: your AI friend that's always on the same page"
authors = ["Bhada Yun", "Tianyun Yuan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ivee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
screenshots = "0.8.10"
dirs = "5.0.1"
tesseract = "0.15.1"

chrono = "0.4.19"
clap = "2.33.3"
ctrlc = "3.1.9"
hound = "3.4.0"
itertools = "0.10.1"
pv_porcupine = "*"
pv_recorder = "*"
once_cell = "1.20.2"
anthropic-rs = "0.1.7"
futures-util = "0.3.31"
pv_rhino = "*"
pv_cheetah = "*"
